<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="0dp"
                android:padding="15dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/roundCardView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"

                    android:elevation="0dp"
                    app:cardCornerRadius="75dp">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/default_profile_image"
                        android:background="@drawable/circle_shape"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFC107"
                        android:text="Edit Profile"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/user_information"
                        android:textSize="20sp"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/gender"
                        android:textSize="15sp"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#6E6C6C"
                        android:id="@+id/profile_gender"
                        android:textSize="15sp"
                        android:layout_alignParentEnd="true"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/age"
                        android:textSize="15sp"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#6E6C6C"
                        android:id="@+id/profile_age"
                        android:textSize="15sp"
                        android:layout_alignParentEnd="true"
                        android:textStyle="bold"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/email"
                        android:textSize="15sp"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="#6E6C6C"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:cardCornerRadius="10dp"-->
<!--            android:layout_marginTop="20dp">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginTop="0dp"-->
<!--            android:padding="15dp">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/registered_sessions"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:textColor="@color/black"/>-->

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/session_list"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:padding="10dp" />-->

<!--        </LinearLayout>-->
<!--        </com.google.android.material.card.MaterialCardView>-->

    </LinearLayout>

</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:orientation="vertical">-->

<!--<ImageView-->
<!--    android:id="@+id/profile_picture"-->
<!--    android:layout_width="100dp"-->
<!--    android:layout_height="100dp"-->
<!--    android:src="@drawable/default_profile_picture"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginTop="16dp"-->
<!--    android:background="@drawable/circle_shape"-->
<!--    android:scaleType="centerCrop"-->
<!--    android:contentDescription="@string/profile_picture" />-->

<!--<TextView-->
<!--    android:id="@+id/name"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/name_placeholder"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginTop="8dp" />-->

<!--<TextView-->
<!--    android:id="@+id/gender"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/gender_placeholder"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginTop="8dp" />-->

<!--<TextView-->
<!--    android:id="@+id/age"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/age_placeholder"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginTop="8dp" />-->

<!--<TextView-->
<!--    android:id="@+id/email"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/email_placeholder"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginTop="8dp" />-->

<!--<TextView-->
<!--    android:id="@+id/upcoming_sessions_title"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/upcoming_sessions"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginTop="16dp" />-->

<!--<ListView-->
<!--    android:id="@+id/upcoming_sessions_list"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginTop="8dp"/>-->

<!--<TextView-->
<!--    android:id="@+id/previous_sessions_title"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/previous_sessions"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginTop="16dp" />-->

<!--<ListView-->
<!--    android:id="@+id/previous_sessions_list"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginTop="8dp"/>-->

<!--<Button-->
<!--    android:id="@+id/edit_profile_button"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/edit_profile"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_marginTop="16dp"/>-->
<!--</LinearLayout>-->
